--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Clever Developer</title>
 </head>
 <body>
-Trying out github pages
+update an object with a delta json 
+    mapper.readerForUpdating(object).readValue(json);
 </body>
 </html>
